@@ -22,8 +22,7 @@ You can run the Kafdrop JAR directly, via Docker, or in Kubernetes.
 
 ## Running from JAR
 ```sh
-java --add-exports=jdk.management.agent/jdk.internal.agent=ALL-UNNAMED \
-    -jar target/kafdrop-<version>.jar --zookeeper.connect=<host>:<port>,<host>:<port>,...
+java -jar target/kafdrop-<version>.jar --zookeeper.connect=<host>:<port>,<host>:<port>,...
 ```
 
 Open a browser and navigate to [http://localhost:9000](http://localhost:9000). The port can be overridden by adding the following config:
